--- a/.gitignore
+++ b/.gitignore
@@ -30,12 +30,12 @@ go.work.sum
 # Editor/IDE
 # .idea/
 # .vscode/
-.swp
-*.swp
-*.*.swp
+.swo
+*.swo
+*.*.swo
 MyRedis
 main
 
-.colors.go.swp
-.main.go.swp
+.colors.go.swo
+.main.go.swo
 
